syntax = "proto3";

message TestOther {
  bool bool_field = 1;
  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
  }
  Corpus enum_field = 2;
  bytes bytes_field = 3;
  string string_field = 4;
}
